knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Date__c/pqcrush__Key_Date__c.object-meta.xml
<CustomObject>
    <label>Key Date</label>
    <nameField>
        <label>Key Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>