knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Date__c/fields/pqcrush__Date__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>