knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Date__c/fields/pqcrush__Reminder__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Reminder__c</fullName>
    <label>Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On the day of</fullName>
            </value>
            <value>
                <fullName>1 day before</fullName>
            </value>
            <value>
                <fullName>2 days before</fullName>
            </value>
            <value>
                <fullName>1 week before</fullName>
            </value>
            <value>
                <fullName>2 weeks before</fullName>
            </value>
            <value>
                <fullName>30 days before</fullName>
            </value>
            <value>
                <fullName>60 days before</fullName>
            </value>
            <value>
                <fullName>90 days before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>